; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-stub.c_dns_stub_stream_complete.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-stub.c_dns_stub_stream_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [54 x i8] c"DNS TCP connection terminated, destroying queries: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @dns_stub_stream_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dns_stub_stream_complete(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = call i32 @assert(%struct.TYPE_5__* %6)
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @log_debug_errno(i32 %8, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %18, %2
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @set_first(i32 %13)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %10
  br label %21

18:                                               ; preds = %10
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @dns_query_free(i32* %19)
  br label %10

21:                                               ; preds = %17
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %23 = call i32 @dns_stream_unref(%struct.TYPE_5__* %22)
  ret i32 0
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i32 @log_debug_errno(i32, i8*) #1

declare dso_local i32* @set_first(i32) #1

declare dso_local i32 @dns_query_free(i32*) #1

declare dso_local i32 @dns_stream_unref(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
